fix landing page overlap bottom

--- a/src/css/local.less
+++ b/src/css/local.less
@@ -78,6 +78,7 @@
 
         .cs-flex-group {
             padding-top: 0;
+            height: auto;
         }
 
         .cs-desc {
